--- a/assets/style.css
+++ b/assets/style.css
@@ -15,6 +15,30 @@ h2 {
 	font-size: 1.3em;
 }
 
+header {
+	margin-bottom: 20px;
+}
+
 footer {
 	background-color: #d6f5d6;
+}
+
+#game {
+	width: 500px;
+	height: auto;
+	margin: auto;
+	margin-bottom: 20px;
+}
+
+#game:after {
+	display: table;
+	content: "";
+	clear: both;
+}
+
+.cell {
+	float: left;
+	width: 25px;
+	height: 25px;
+	background-color: white;
 }
